--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,14 +15,10 @@ p {
 }
 
 body {
+    height: 100vh;
     background: url(../img/bg-desktop.svg) center center no-repeat;
     background-size: cover;
     background-color: hsl(257, 40%, 49%);
-    margin: 50px;
-}
-
-.container {
-    height: 100vh;
     display: grid;
     grid-template-areas: "header header"
                          "illustration about"
@@ -38,6 +34,8 @@ body {
 
 .header {
     grid-area: header;
+    margin-top: 60px;
+    margin-bottom: 100px;
 }
 
 /*ILLUSTRATION*/
@@ -62,7 +60,7 @@ body {
     margin-top: 20px;
 }
 
-.about .singup button {
+.about .signup button {
     color: hsl(257, 40%, 49%);
     font-size: 1.5rem;
     background-color: #fff;
@@ -71,11 +69,11 @@ body {
     width: 150px;
     height: 40px;
     transition: 0.3s;
-    -webkit-box-shadow: 4px 4px 21px 2px rgba(0,0,0,0.45);
-    box-shadow: 4px 4px 21px 2px rgba(0,0,0,0.45);
+    -webkit-box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.30);
+    box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.30);
 }
 
-.about .singup button:hover {
+.about .signup button:hover {
     cursor: pointer;
     color: #fff;
     background-color: hsl(300, 69%, 71%);
